k8s/ingress-srv.yaml
#This file serves as a configuration file for the ingress service. It is used to route traffic to the correct service based on the URL.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    #Allow regexp for the URL, for example '/api/v1/users/:id' would be '/api/v1/users/?(.*)'
    nginx.ingress.kubernetes.io/use-regex: 'true'

    #Redirect to the correct service based on the URL
spec:
  rules:
    - host: sisrstp
